2005-08-12  Frank Ch. Eigler  <fche@elastic.org>

	PR systemtap/1122 et alii
	* parse.cxx (parse_literal): Parse and range-limit 64-bit numbers.
	(parse_unary): Correct precedence glitch.
	* staptree.h (literal_number): Store an int64_t.
	* staptree.cxx: Corresponding changes.
	* translate.cxx (check_dbz): Remove - insufficient.
	(emit_function): Define CONTEXT macro sibling for THIS.
	(c_typename): pe_long -> int64_t.
	(visit_literal_number): Format literal rigorously and uglily.
	(c_assignop, visit_binary_expression): Handle div/mod via new
	helper functions in runtime.
	* tapset/builtin_logging.stp: Add error, exit builtins.
	* testsuite/buildok/ten,eleven.stp: New tests.
	* testsuite/parse{ko,ok}/six.stp: Modify for larger numbers.
	* testsuite/transok/one.stp: Add more ";"s, maybe unnecessarily.

2005-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Tweak to turn into fedora-flavoured spec.
	Don't build/install runtime docs.

2005-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (uninstall-local): New target.
	* Makefile.in: Regenerate.

2005-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_function): Add an extra { } around the
	function body visitation.
	* tapset/timestamp_functions.stp: New file.
	* tapset/builtin_conversions.stp: Aggregated from [hex]string.
	* tapset/builtin_logging.stp: Aggregated from log/warn/printk.

2005-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx: Tweak hex/decimal printing for consistency.
	(emit_registrations): Remove module-specific code, anticipating
	that libelf gives us run-time addresses already.

2005-08-10  Roland McGrath  <roland@redhat.com>

	* loc2c.c (emit_base_store): New function.
	(emit_bitfield): Rewritten to handle stores, change parameters.
	(c_translate_fetch): Update caller.
	(c_translate_store): New function.
	* loc2c.h: Declare it.
	* loc2c-test.c (handle_variable): Grok "=" last argument to do a store.
