@@ -1,0 +1,31 @@
+#! stap -p4
+
+# testing the "in" operator
+
+global foo, goo, moo
+
+probe begin
+{
+	foo[10] = "a"
+	goo["a",12,"c",14,"d"] = 10
+	moo[1,2,3,4,5] = "hello"
+
+	if (10 in foo)
+	{
+		foo[10] = "yes"
+	}
+
+	if (["a",12,"c",14,"d"] in goo)
+	{
+		goo["p",1,"q",2,"r"] += (12 in foo)
+	}
+
+	x = 1
+	y = 2
+	z = 3	
+
+	if ([x,y,z,y,x] in moo)
+	{
+		foo[30] = moo[(x in foo), (y in foo), (z in foo), (y in foo), (x in foo)]
+	}
+}
