@@ -1,3 +1,8 @@
+2005-08-12  Graydon Hoare  <graydon@redhat.com>
+
+	* map-values.c (_stp_map_entry_exists): New function.
+	* map.h (_stp_map_entry_exists): Declare it.
+
 2005-08-12  Frank Ch. Eigler  <fche@elastic.org>
 
 	* arith.c: New file to contain arithmetic helper functions.
